Zope Changes

  This file contains change information for the current Zope release. 
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

    Features Added

     - Zope installations upgraded from pre-2.4 installations
       did not show the WebDAV LockManager entry in the control panel.

     - "requestprofiler.py" script in utilities now does better analysis,
       including:

       "active" in detailed output is now slightly more meaningful.
       It is > 0 only if other requests started after it started
       but before it finished.  The greater the active count, the
       more likely it is that something was going on at the time
       in which the request ran that caused a slowdown.

       Multiple files may be analyzed at the same time.

       Also, script recognizes "U" opcode in big M logs as meaning a restart.

      - Added a "preview" field to the edit form for Image
        objects. This provides a preview of the actual image data on 
        the form to make it easier to know what you are working
        on. The preview image is scaled if necessary to be useful
        without being obtrusive.

      - Added the ability to edit File object content in a
        textarea. If the content of a File is a text type and the size
        is less than 64K (the max size for text area data in some Web
        browsers), then you can edit the content as you would a DTML
        or other text-based object.

      - New user management API for user folder objects was implemented.

        As of Zope 2.5, manage_addUser, manage_editUser and manage_delUsers
        form the official API for user management. The old grotesque way of
        using manage_users is now deprecated. 

        The default implementation of these API methods simply call the
        _doXXX versions of the methods that user folder authors have already
        implemented, which means that these APIs will work for current user