@@ -253,7 +253,7 @@
     lookups. For example, in the expression: <code>a.b.c.x.foo</code>, the object
     <code>a</code> is searched no more than once, even though it is wrapped three
     times.</p>
-<p>.. <a href="#1">[1]</a> Gil, J., Lorenz, D., 
+<p><a name="1">[1]</a> Gil, J., Lorenz, D., 
    <a href="http://www.bell-labs.com/people/cope/oopsla/Oopsla96TechnicalProgramAbstracts.html#GilLorenz">Environmental Acquisition--A New Inheritance-Like Abstraction Mechanism</a>, 
    OOPSLA '96 Proceedings, ACM SIG-PLAN, October, 1996</p>
 </body>
